[package]
name = "vibe-rs"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Tool to vibrate toys while running a command"
homepage = "https://github.com/Denendaden/vibe-rs"
repository = "https://github.com/Denendaden/vibe-rs"
readme = "README.md"

[dependencies]
buttplug = "9.0"
tokio = { version = "1.46", features = ["full"] }

[[bin]]
name = "vibe"
path  = "src/main.rs"
